[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/background/HudSpheres.png" type="Texture" id=1]
[ext_resource path="res://assets/background/HudRings.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/Hud.gd" type="Script" id=3]
[ext_resource path="res://assets/background/HudNumbers.png" type="Texture" id=4]
[ext_resource path="res://assets/background/PerfectText.png" type="Texture" id=5]
[ext_resource path="res://assets/background/GetBlueSphereText.png" type="Texture" id=6]
[ext_resource path="res://assets/background/GetBlueSphereTex2.png" type="Texture" id=7]
[ext_resource path="res://assets/background/PerfectText2.png" type="Texture" id=8]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="SphereCounter" type="TextureRect" parent="."]
margin_left = 60.0
margin_top = 30.0
margin_right = 291.0
margin_bottom = 96.0
texture = ExtResource( 1 )

[node name="Hundreds" type="Sprite" parent="SphereCounter"]
position = Vector2( 39, 33 )
texture = ExtResource( 4 )
hframes = 8
vframes = 2

[node name="Tens" type="Sprite" parent="SphereCounter"]
position = Vector2( 87, 33 )
texture = ExtResource( 4 )
hframes = 8
vframes = 2

[node name="Units" type="Sprite" parent="SphereCounter"]
position = Vector2( 135, 33 )
texture = ExtResource( 4 )
hframes = 8
vframes = 2

[node name="RingCounter" type="TextureRect" parent="."]
margin_left = 669.0
margin_top = 30.0
margin_right = 900.0
margin_bottom = 96.0
texture = ExtResource( 2 )

[node name="Hundreds" type="Sprite" parent="RingCounter"]
position = Vector2( 96, 33 )
texture = ExtResource( 4 )
hframes = 8
vframes = 2

[node name="Tens" type="Sprite" parent="RingCounter"]
position = Vector2( 144, 33 )
texture = ExtResource( 4 )
hframes = 8
vframes = 2

[node name="Units" type="Sprite" parent="RingCounter"]
position = Vector2( 192, 33 )
texture = ExtResource( 4 )
hframes = 8
vframes = 2

[node name="GetBlueSpheresText" type="TextureRect" parent="."]
margin_left = 240.0
margin_top = 300.0
margin_right = 720.0
margin_bottom = 348.0
texture = ExtResource( 6 )

[node name="GetBlueSpheresText2" type="TextureRect" parent="."]
margin_left = 480.0
margin_top = 300.0
margin_right = 960.0
margin_bottom = 348.0
texture = ExtResource( 7 )

[node name="PerfectText" type="TextureRect" parent="."]
margin_left = -132.0
margin_top = 252.0
margin_right = 132.0
margin_bottom = 300.0
texture = ExtResource( 5 )

[node name="PerfectText2" type="TextureRect" parent="."]
margin_left = 960.0
margin_top = 252.0
margin_right = 1224.0
margin_bottom = 300.0
texture = ExtResource( 8 )
